--- a/nx.html
+++ b/nx.html
@@ -12,6 +12,7 @@
         #mynetwork {
             width: 100vw;
             height: 80vh;
+            height: 80vh;
             border: 1px solid rgb(238, 237, 237);
             background-color: #f2ffb6;
             position: relative;
